--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -52,11 +52,8 @@
       <figure class="no-gutters-phone">
       <figcaption class="figcaption"><figcredit style='font-family:benton-sans'>JOSH KAHEN | FILE</figcaption>
       <div class='story'>
-      <p align='center'>
-        College students tend to vote at a lower rate than other demographics of Americans. According to the Institute for Democracy and Higher Education, just 48% of college students voted in the 2016 election, lower than the national average of 61%.
-        How do UC Berkeley students fare in terms of voting rates? In this piece, we compare UC Berkeley students by discipline and across UC campuses.</p>
+      <p align='center'></p>
         </div>
-      <h4>Who votes in the UC system?</h4>
       {% include "partials/timeline.html" %}
     <div class="nerd-box">
     </body>
