--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -3,9 +3,9 @@
     </p>
 
     <div class='story'>
-    <h1 style='font-family:tiempos'>Who votes at UC Berkeley?</h1>
+    <h1 style='font-family:tiempos'>150 Years at The Daily Californian</h1>
     </div>
-    <p class="subhead" style='font-family:tiempos'>Comparing voting rates</p>
+    <p class="subhead" style='font-family:tiempos'>Timeline</p>
     <div class="info">
         <p>
             By <span class="byline"><a href="https://www.dailycal.org/author/alexzhao/" target="_blank">Alex Zhao</a>
