remove old files

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta charset="utf-8">
-        {%block title%}<title>Who votes at UC Berkeley?</title>{%endblock%}
+        {%block title%}<title>150 Years of Daily Cal</title>{%endblock%}
         {%include "meta/_icons.html"%}
 
         {%include "meta/_social.html"%}
