--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,7 @@
 @import 'footer';
 @import 'photos';
 @import 'buttons';
+@import 'progress';
 @import 'ads';
 @import 'comments';
 @import 'share';
