delete visuals and maia changes

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -31,18 +31,6 @@
           crossorigin="anonymous">
         </script>
 
-        <!-- Leaflet -->
-
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
-        <script type="text/javascript" src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js" integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og==" crossorigin=""></script>
-
-        <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
-        <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
-        <script type="text/javascript" src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
-
-        <script src="https://unpkg.com/leaflet.featuregroup.subgroup@1.0.2/dist/leaflet.featuregroup.subgroup.js"></script>
-
-
     </head>
 
       {% include "partials/progress.html" %}
@@ -53,20 +41,21 @@
       <figure class="no-gutters-phone">
         <!--<figcaption class="figcaption"><figcredit style='font-family:benton-sans'>JOSH KAHEN | FILE</figcaption>-->
       <div class='story'>
-      <p align='center'></p>
+      <p align='center'>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
         </div>
       {% include "partials/timeline.html" %}
-      <br/>
     <div class="nerd-box">
     </body>
 <h4>About this story</h4>
 <p align='left'>
 </p>
 <p>
-  This project is open-source on <a href="https://github.com/dailycal-projects/timeline" target="_blank"> Github</a>.
+  Michelle Li contributed to this project. This project is open-source on <a href="https://github.com/dailycal-projects/timeline" target="_blank"> Github</a>.
 </p>
 {% include "partials/_footer.html" %}
 <script type="text/javascript">window.tweetText = "{{META.share.twitter.share_tweet}}";</script>
+<br>
+<br>
 <br>
 <h4>Support us</h4>
 <p>We're a nonprofit, student-run newsroom. Please consider <a href="https://donate.dailycal.org/">donating</a> to support our coverage.</p>
