--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -3,13 +3,16 @@
     </p>
 
     <div class='story'>
-    <h1 style='font-family:tiempos'>150 Years at The Daily Californian</h1>
+    <h1 style='font-family:tiempos'>150 Years of The Daily Californian</h1>
     </div>
-    <p class="subhead" style='font-family:tiempos'>Timeline</p>
+    <p class="subhead" style='font-family:tiempos'>A look at 150 years of headlines</p>
     <div class="info">
         <p>
-            <!--By <span class="byline"><a href="https://www.dailycal.org/author/alexzhao/" target="_blank">Alex Zhao</a>-->
-            </span> <br /> <span class="timestamp"> <time datetime="2020-07-24T08:00-0800">MARCH 24, 2021</time></span>
+            By <span class="byline"><a href="https://www.dailycal.org/author/alexzhao/" target="_blank">Alex Zhao</a>, 
+                <a href="https://www.dailycal.org/author/malviar/" target="_blank">Maia Alviar</a>, 
+                <a href="https://www.dailycal.org/author/jocelynhuang/" target="_blank">Jocelyn Huang</a>, and
+                <a href="https://www.dailycal.org/author/jharris/" target="_blank">Jordan Harris</a>
+            </span> <br /> <span class="timestamp"><time datetime="2020-07-24T08:00-0800">JUNE 5, 2021</time></span>
             </br>
             </br>
         </p>
